--- a/.gitignore
+++ b/.gitignore
@@ -392,3 +392,7 @@ obj/
 !/gradle/wrapper/gradle-wrapper.jar
 
 # End of https://www.toptal.com/developers/gitignore/api/android,androidstudio,kotlin,swift,swiftpackagemanager,swiftpm,xcode,xcodeinjection,intellij+iml
+
+# Claude
+.claude/
+CLAUDE.md
