[docs] CLAUDE.md, rules, SPECIFICATION 세팅
- .claude/CLAUDE.md: 기술 스택, 타겟 플랫폼, 아키텍처, Git 워크플로우 추가
- .claude/rules/ 5개 파일 생성 (architecture, supabase, issue/pr-workflow, implementation-strategy)
- docs/SPECIFICATION.md: 4탭 네비게이션, 실제 DB 스키마, 즐겨찾기/읽기이력 화면 반영
- .gitignore: .claude/ 추적 허용 (로컬 설정만 제외)

--- a/.gitignore
+++ b/.gitignore
@@ -393,6 +393,6 @@ obj/
 
 # End of https://www.toptal.com/developers/gitignore/api/android,androidstudio,kotlin,swift,swiftpackagemanager,swiftpm,xcode,xcodeinjection,intellij+iml
 
-# Claude
-.claude/
-CLAUDE.md
+# Claude (로컬 설정만 제외)
+.claude/settings.local.json
+.claude/worktrees/
