[chore] #33: Firebase 프로젝트 설정 (Android/iOS)
- Firebase BOM 34.9.0 및 google-services 4.4.4 플러그인 추가
- Android: google-services 플러그인 적용, firebase-analytics 의존성 추가
- iOS: GoogleService-Info.plist 배치, FirebaseApp.configure() 초기화
- .gitignore에 GoogleService-Info.plist 추가

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -23,6 +23,8 @@ room = "2.8.4"
 sqlite = "2.6.2"
 buildkonfig = "0.15.2"
 datastore = "1.1.7"
+google-services = "4.4.4"
+firebase-bom = "34.9.0"
 supabase = "3.3.0"
 
 [libraries]
@@ -50,6 +52,8 @@ kotlinx-datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.
 ktor-client-okhttp = { module = "io.ktor:ktor-client-okhttp", version.ref = "ktor" }
 ktor-client-darwin = { module = "io.ktor:ktor-client-darwin", version.ref = "ktor" }
 androidx-datastore-preferences-core = { module = "androidx.datastore:datastore-preferences-core", version.ref = "datastore" }
+firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebase-bom" }
+firebase-analytics = { module = "com.google.firebase:firebase-analytics" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
@@ -61,3 +65,4 @@ kotlinx-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", vers
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 room = { id = "androidx.room", version.ref = "room" }
 buildkonfig = { id = "com.codingfeline.buildkonfig", version.ref = "buildkonfig" }
+google-services = { id = "com.google.gms.google-services", version.ref = "google-services" }
