--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -40,5 +40,15 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gradle-
 
+      - name: Decode google-services.json
+        env:
+          GOOGLE_SERVICES_JSON: ${{ secrets.GOOGLE_SERVICES_JSON }}
+        run: |
+          if [ -z "$GOOGLE_SERVICES_JSON" ]; then
+            echo "Error: GOOGLE_SERVICES_JSON secret is not set"
+            exit 1
+          fi
+          echo "$GOOGLE_SERVICES_JSON" | base64 --decode > composeApp/google-services.json
+
       - name: Build Android Debug
         run: ./gradlew :composeApp:assembleDebug --stacktrace
